Fix: Archive: Preserve whitespace in description

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -284,7 +284,7 @@ input:focus, textarea:focus {
   margin-bottom: 1ex;
   margin-left: 2ex;
 }
-.comment .text {
+.comment .text, .archive .preformatted {
   /* From 2006: http://longren.io/wrapping-text-inside-pre-tags/ */
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
